# nyx

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  TODO.md  current_grammar.bnf  file.py  grammar.bnf  keywords-operators  perf.data  perf.data.old  temp.hpp
examples/: A.wis  Array.nyx  B.eis  B.wis  C.wis  Class.nyx  Class.wis  Factorial.nyx  Fibonacci.nyx  Fibonacci.wis  array.eis  array.wis  class.eis  factorial.eis  factorial.wis  fibonacci.eis  fibonacci.wis  hello-world.eis  imported.eis  imported.wis  make-test.py  stress.eis  stress.wis  test.eis  test2.eis
include/: CLIConfigParser.hpp  ColoredPrintHelper.hpp  Common.hpp
include/AST/: AST.hpp  ASTPrinter.hpp  LiteralValue.hpp  Token.hpp  TokenTypes.hpp  VisitorTypes.hpp  generate-ast.py
include/Backend/: BackendContext.hpp  BackendManager.hpp  RuntimeContext.hpp  RuntimeManager.hpp  RuntimeModule.hpp
include/Backend/CodeGen/: CodeGen.hpp
include/Backend/CodeGenerators/: ByteCodeGenerator.hpp
include/Backend/VirtualMachine/: Chunk.hpp  Disassembler.hpp  Instructions.hpp  Module.hpp  Natives.hpp  StringCacher.hpp  Value.hpp  VirtualMachine.hpp
include/ErrorLogger/: ErrorLogger.hpp
include/Frontend/: CompileContext.hpp  CompileManager.hpp  FrontendContext.hpp  FrontendManager.hpp  Module.hpp
include/Frontend/Parser/: FeatureFlagError.hpp  Parser.hpp  ScopedManager.hpp  TypeResolver.hpp
include/Frontend/Parser/Optimization/: ConstantBinaryExprFolding.hpp  ConstantTernaryExprFolding.hpp  ConstantUnaryExprFolding.hpp  Utilities.hpp
include/Frontend/Scanner/: Scanner.hpp  Trie.hpp
include/nyx/: CLIConfigParser.hpp  Common.hpp  NyxFormatter.hpp
include/nyx/AST/: AST.hpp  ASTPrinter.hpp  Token.hpp  TokenTypes.hpp  VisitorTypes.hpp  generate-ast.py
include/nyx/Backend/: BackendContext.hpp  BackendManager.hpp  RuntimeModule.hpp
include/nyx/Backend/CodeGenerators/: ByteCodeGenerator.hpp
include/nyx/Backend/VirtualMachine/: Disassembler.hpp  Natives.hpp  StringCacher.hpp  Value.hpp  VirtualMachine.hpp
include/nyx/ErrorLogger/: ErrorLogger.hpp
include/nyx/Frontend/: FrontendContext.hpp  FrontendManager.hpp  Module.hpp
include/nyx/Frontend/Parser/: FeatureFlagError.hpp  Parser.hpp  ScopedManager.hpp  TypeResolver.hpp
include/nyx/Frontend/Parser/Optimization/: ConstantBinaryExprFolding.hpp  ConstantTernaryExprFolding.hpp  ConstantUnaryExprFolding.hpp
include/nyx/Frontend/Scanner/: Scanner.hpp  Trie.hpp
src/: AST.cpp  AST.hpp  ASTPrinter.cpp  ASTPrinter.hpp  CLIConfigParser.cpp  Common.hpp  Module.hpp  NyxFormatter.cpp  Token.hpp  TokenTypes.hpp  VisitorTypes.cpp  VisitorTypes.hpp  eis.cpp  generate-ast.py  nyx-fmt.cpp  nyx.cpp  wis.cpp
src/AST/: AST.cpp  ASTPrinter.cpp  VisitorTypes.cpp
src/Backend/: BackendContext.cpp  BackendManager.cpp  RuntimeContext.cpp  RuntimeManager.cpp
src/Backend/CodeGen/: CodeGen.cpp
src/Backend/CodeGenerators/: ByteCodeGenerator.cpp
src/Backend/VirtualMachine/: Chunk.cpp  Disassembler.cpp  Natives.cpp  StringCacher.cpp  VMMain.cpp  Value.cpp  VirtualMachine.cpp
src/CodeGen/: CodeGen.cpp  CodeGen.hpp  Disassembler.cpp  Disassembler.hpp
src/ErrorLogger/: ErrorLogger.cpp  ErrorLogger.hpp
src/Frontend/: CompileContext.cpp  CompileManager.cpp  FrontendContext.cpp  FrontendManager.cpp
src/Frontend/Parser/: Parser.cpp  TypeResolver.cpp
src/Frontend/Parser/Optimization/: ConstantFolding.cpp
src/Frontend/Scanner/: Scanner.cpp  Trie.cpp
src/Parser/: Object.cpp  Object.hpp  Parser.cpp  Parser.hpp  TypeResolver.cpp  TypeResolver.hpp  VisitorTypes.cpp  VisitorTypes.hpp
src/Scanner/: Scanner.cpp  Scanner.hpp  Trie.cpp  Trie.hpp
src/VM/: Chunk.cpp  Chunk.hpp  Instructions.hpp  List.cpp  List.hpp  Natives.cpp  Natives.hpp  SharedUniquePtr.hpp  VM.cpp  VM.hpp  Value.cpp  Value.hpp
src/VM2/: Chunk.cpp  Chunk.hpp  Disassembler.cpp  Instructions.hpp  Module.hpp  Natives.cpp  Natives.hpp  StringCacher.cpp  StringCacher.hpp  VMMain.cpp  Value.cpp  Value.hpp  VirtualMachine.cpp  VirtualMachine.hpp
src/VirtualMachine/: Chunk.cpp  Chunk.hpp  Disassembler.cpp  Disassembler.hpp  Instructions.hpp  Module.hpp  Natives.cpp  Value.cpp  Value.hpp  VirtualMachine.cpp  VirtualMachine.hpp
test/: HelloWorld.wis  RunTests.sh
test/Scanner/: ExprEOL.nyx  StmtEOL.wis
